--- a/app/src/main/res/layout/fragment_articoli.xml
+++ b/app/src/main/res/layout/fragment_articoli.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/fragment_articoli_layout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Articoli Fragment"
-        android:textSize="30sp"
-        android:layout_marginTop="30dp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Articoli Fragment"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="Button" />
 
 
-
-
-
-
-
-
+    </RelativeLayout>
 </ScrollView>
